# FontaineRTC

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: build.yml
backend/: Dockerfile  pyproject.toml
backend/fontaine/: __main__.py  app.py  config.py  subserver.py  updater.py  web.py
backend/fontaine/admin/: db.py  flags.py  manager.py  router.py
backend/fontaine/core/: crypto.py  security.py
backend/fontaine/db/: __init__.py  base.py  models.py
backend/fontaine/node/: manager.py  router.py  store.py  sysinfo.py  yaml_writer.py
backend/fontaine/node/wdtt/: __init__.py  installer.py  manager.py  store.py
backend/tests/: test_admin.py  test_crypto.py  test_e2e.py  test_node.py  test_security.py  test_subscription.py  test_updater.py  test_uri.py  test_wdtt.py  test_yaml.py
deploy/: fontaine.service  install.sh  nginx.conf.example  uninstall.sh  update.sh
docs/: API.md  ARCHITECTURE.md  MIGRATION.md  PROTOCOL.md  THEMES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: subscription.tsx  ui.tsx  wdtt.tsx
frontend/src/lib/: compat.ts  countries.ts  jsHighlight.ts  logHighlight.ts
frontend/src/pages/: AdminDashboard.tsx  Login.tsx  NodeDashboard.tsx  WdttPanel.tsx
frontend/src/styles/: global.css
frontend/src/theme/: ThemeControls.tsx  ThemeProvider.tsx  themeIO.ts  themes.ts  tokens.ts
